--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
+    "mongodb": "^4.8.1",
+    "ping": "^0.4.2",
     "pug": "^3.0.2"
   }
 }
